tweak the spacing

--- a/rca/static_src/sass/components/_stat-block.scss
+++ b/rca/static_src/sass/components/_stat-block.scss
@@ -1,39 +1,61 @@
 .stat-block {
     $root: &;
 
-    &__heading {
+    &__header {
         @include media-query(large) {
-            grid-column: 2 / span 1;
+            margin-bottom: -($gutter * 3.5);
         }
     }
 
-    &__item {
+    &__heading {
         grid-column: 1 / span 2;
+        margin-bottom: $gutter;
 
         @include media-query(medium) {
-            &:nth-child(even) {
-                grid-column: 2 / span 2;
+            grid-column: 1 / span 1;
+            padding-right: $gutter;
+            margin-bottom: 0;
+        }
+
+        @include media-query(large) {
+            grid-column: 2 / span 1;
+            padding-right: 0;
+        }
+    }
+
+    &__item-container {
+        grid-column: 1 / span 2;
+        margin-bottom: ($gutter * 2.5);
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        @include media-query(medium) {
+            &:nth-of-type(even) {
+                #{$root}__item {
+                    grid-column: 2 / span 2;
+                }
             }
 
-            &:nth-child(odd) {
-                grid-column: 1 / span 2;
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-
-                // keep the next stat underneath
-                #{$root}__meta {
-                    grid-column: 1 / span 2;
+            &:nth-of-type(odd) {
+                #{$root}__item {
+                    grid-column: 1 / span 1;
                 }
             }
         }
 
         @include media-query(large) {
             &:nth-child(even) {
-                grid-column: 4 / span 1;
+                #{$root}__item {
+                    grid-column: 4 / span 1;
+                }
             }
 
             &:nth-child(odd) {
-                grid-column: 3 / span 2;
+                #{$root}__item {
+                    grid-column: 3 / span 1;
+                }
             }
         }
     }
@@ -45,16 +67,24 @@
 
     &__number {
         font-size: 80px;
-        line-height: 112px;
+        line-height: 81px;
 
         @include media-query(medium) {
             font-size: 100px;
-            line-height: 140px;
+            line-height: 101px;
         }
 
         @include media-query(large) {
             font-size: 130px;
-            // line-height: 182px;
+            line-height: 130px;
+        }
+
+        &--thin {
+            margin-right: -($gutter / 2);
+
+            @include media-query(large) {
+                margin-right: -$gutter;
+            }
         }
     }
 
@@ -79,6 +109,10 @@
     }
 
     &__body {
-        margin: $gutter 0 0;
+        margin: ($gutter / 2) 0 0;
+
+        @include media-query(medium) {
+            padding-right: $gutter;
+        }
     }
 }
