add fixed background in

--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
@@ -1,4 +1,4 @@
-<section class="section bg bg--dark">
+<section class="section section--stat-block" style="--stat-block-bg-image: url('{{bg_image_url}}')">
     <div class="section__container stat-block">
         <div class="stat-block__header grid">
             <h3 class="stat-block__heading heading heading--three">{{heading}}</h3>
