--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color--white-24: rgba(255, 255, 255, 0.24);
 $color--black-12: rgba(0, 0, 0, 0.12);
 $color--black-80: rgba(0, 0, 0, 0.8);
 $color--black-24: rgba(0, 0, 0, 0.24);
+$color--black-36: rgba(0, 0, 0, 0.36);
 
 $color--primary: $color--black;
 $color--secondary: $color--white;
