Initial sticky nav work

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -1,5 +1,6 @@
 {% extends "patterns/base_page.html" %}
 {% load wagtailcore_tags wagtailimages_tags static %}
+{% block body_class %}app--homepage{% endblock %}
 
 {% block content %}
 
@@ -7,27 +8,23 @@
 
     <div class="page page--overlay" id="content">
 
-        <div class="hero-action-pane">
-            <div class="hero-action-pane__cta">
-                <a href="#" class="hero-action-pane__cta-link">
-                    <div class="hero-action-pane__cta-heading">
-                        Apply for programmes starting 2020
-                    </div>
-                    <div class="hero-action-pane__cta-sub-heading">
-                        Shape your future
-                    </div>
-                    <svg width="12" height="8" class="hero-action-pane__cta-icon"><use xlink:href="#arrow"></use></svg>
-                </a>
-            </div>
-        </div>
-
-        <h1>{{ page.title }}</h1>
+        {% include "patterns/molecules/hero-action-pane/hero-action-pane.html" %}
 
         <div class="page__content">
 
             <section class="section section--start bg bg--dark">
 
-                Propersition statements
+                <div class="proposition-statement grid">
+                    <div class="proposition-statement__introduction">The world’s number 1 art & design university</div>
+                    <a href="#" class="proposition-statement__link link link--primary link--link body body--two">
+                        <span class="link__label">Book an open day</span>
+                        <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                    </a>
+                </div>
+
+                <div class="section__notch">
+                    <div class="section__notch-fill section__notch-fill--second-col"></div>
+                </div>
 
             </section>
 
