--- a/rca/static_src/sass/components/_footer-link-item.scss
+++ b/rca/static_src/sass/components/_footer-link-item.scss
@@ -11,10 +11,10 @@
         @include font-size(xxs);
         @include underline-hover();
         position: relative;
-        color: $color--link-darkbg;
+        color: $color--white;
 
         &:hover {
-            color: $color--link-darkbg;
+            color: $color--white;
         }
     }
 }
