--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -59,6 +59,7 @@
 @import 'components/pathways';
 @import 'components/pathway-item';
 @import 'components/programme-overview';
+@import 'components/proposition-statement';
 @import 'components/related-content';
 @import 'components/responsive-object';
 @import 'components/rich-text';
