--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -38,7 +38,9 @@
         &::before {
             @include z-index(under);
             content: '';
-            background-image: var(--stat-block-bg-image); // set inline in stat-block.html
+            background-image: var(
+                --stat-block-bg-image
+            ); // set inline in stat-block.html
             background-repeat: no-repeat;
             background-position: center top;
             background-size: cover;
