--- a/rca/static_src/sass/components/_hero.scss
+++ b/rca/static_src/sass/components/_hero.scss
@@ -40,6 +40,11 @@
         pointer-events: none;
     }
 
+    &__menu-toggler {
+        display: block;
+        height: 90vh;
+    }
+
     .theme-dark & {
         color: $color--black;
         background-color: $color--white;
