--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.html
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.html
@@ -24,4 +24,7 @@
                 >
 </div>
 
-<div class="hero__placeholder"></div>
+<div class="hero__placeholder">
+    <span class="hero__menu-toggler js-menu-on"></span>
+    <span class="hero__cta-toggler js-menu-on"></span>
+</div>
