--- a/rca/static_src/sass/components/_stat-block.scss
+++ b/rca/static_src/sass/components/_stat-block.scss
@@ -19,13 +19,22 @@
         @include media-query(medium) {
             grid-column: 1 / span 1;
             padding-right: $gutter;
-            margin-bottom: 0;
         }
 
         @include media-query(large) {
             grid-column: 2 / span 1;
             padding-right: 0;
+            margin-bottom: 0;
         }
+    }
+
+    &__item {
+        grid-column: 1 / span 2;
+
+        @include media-query(medium) {
+            grid-column: auto;
+        }
+
     }
 
     &__item-container {
@@ -115,9 +124,11 @@
 
     &__body {
         margin: ($gutter / 2) 0 0;
+        max-width: 270px;
 
         @include media-query(medium) {
             padding-right: $gutter;
+            max-width: 100%;
         }
     }
 }
