refactor curriculum intro block to be more reusable

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
@@ -1,5 +1,5 @@
 <section class="section section--start bg bg--dark">
-    {% include "patterns/organisms/curriculum-intro/curriculum-intro.html" %}
+    {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=True %}
 </section>
 
 <section class="section bg bg--light">
