--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -29,9 +29,7 @@
             </section>
 
             <section class="section bg bg--light">
-
-                Transformational stories
-
+                {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=False %}
             </section>
 
             <section class="section bg bg--dark">
