Fix for stats block z-index

--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
@@ -1,4 +1,4 @@
-<section class="section section--stat-block bg bg--stat-block" style="--stat-block-bg-image: url('{{bg_image_url}}')">
+<section class="section section--stat-block bg bg--stat-block" data-stat-block style="--stat-block-bg-image: url('{{bg_image_url}}')">
     <div class="section__notch section__notch--transparent section__notch--opposite">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
