--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -46,10 +46,15 @@
             background-size: cover;
             height: 100%;
             left: 0;
-            position: fixed;
             top: 0;
             width: 100%;
             will-change: transform;
+        }
+    }
+
+    &--before-fixed {
+        &::before {
+            position: fixed;
         }
     }
 
