--- a/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
@@ -1,7 +1,7 @@
 
 <div class="image-video-block">
     <div class="section__row grid">
-        <h2 class="image-video-block__heading heading heading--two">{{page.title}} curriculum</h2>
+        <h2 class="image-video-block__heading heading heading--two">{% if curriculum %}{{page.title}} curriculum{% endif %}</h2>
     </div>
     <div class="section__row grid">
         {% include "patterns/molecules/image-caption-link/image-caption-link.html" with modal=modal %}
