--- a/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
+++ b/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
@@ -1,12 +1,12 @@
 <div class="cookie" data-cookie-message>
-    <div class="cookie__container bg bg--dark">
+    <div class="cookie__container bg bg--light">
         <div class="cookie__message body body--two">
-            <p>We use cookies to help give you the best experience on our website. By continuing without changing your cookie settings, we assume you agree to this. Please read our <a class="cookie__link link link--tertiary link--link" href="/cookie-policy"><span class="link__label">privacy policy</span><svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg></a> to find out more.</p>
+            <p>We use cookies to help give you the best experience on our website. By continuing without changing your cookie settings, we assume you agree to this. Please read our <a class="cookie__link" href="/cookie-policy">privacy policy</a> to find out more.</p>
         </div>
         <div class="cookie__action body body--two">
-            <a aria-label="Close" href="#" class="link link--secondary link--down cookie__btn" data-cookie-dismiss>
+            <a aria-label="Close" href="#" class="link link--secondary link--close cookie__btn" data-cookie-dismiss>
                 <span class="link__label">Dismiss</span>
-                <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                <svg width="10" height="10" class="link__icon"><use xlink:href="#close"></use></svg>
             </a>
         </div>
     </div>
