add optional meta section to the image video block

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -29,7 +29,7 @@
             </section>
 
             <section class="section bg bg--light">
-                {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=False %}
+                {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=False heading=image_video_block.heading subheading=image_video_block.subheading has_meta=True %}
             </section>
 
             <section class="section bg bg--dark">
