--- a/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
@@ -1,13 +1,26 @@
 
 <div class="image-video-block">
     <div class="section__row grid">
-        <h2 class="image-video-block__heading heading heading--two">{% if curriculum %}{{page.title}} curriculum{% endif %}</h2>
+        <h2 class="image-video-block__heading heading heading--two">{% if curriculum %}{{page.title}} curriculum{% else %}{{heading}}{% endif %}</h2>
     </div>
     <div class="section__row grid">
         {% include "patterns/molecules/image-caption-link/image-caption-link.html" with modal=modal %}
     </div>
     <div class="section__row grid">
         <h3 class="image-video-block__subheading heading heading--four">{{subheading}}</h3>
-        <p class="image-video-block__copy body body--one">{{copy}}</p>
+        {% if has_meta %}
+            <div>
+                <p class="image-video-block__copy image-video-block__copy--meta-heading body body--one">{{meta_heading}}</p>
+                <p class="image-video-block__copy image-video-block__copy--meta-copy body body--one">{{meta_copy}}</p>
+                {% if href %}
+                    <a href="{{ href }}" class="body body--two link link--tertiary link--link">
+                        <span class="link__label">Read more</span>
+                        <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+                    </a>
+                {% endif %}
+            </div>
+        {% else %}
+            <p class="image-video-block__copy body body--one">{{copy}}</p>
+        {% endif %}
     </div>
 </div>
