add mobile subheading on non-curriculum version, add notch and section spacing

--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -4,6 +4,7 @@
     $notch-height-medium: 80px;
     $notch-height-large: 100px;
 
+    &--top-space,
     &--start {
         padding-top: ($gutter * 2.5);
 
