--- a/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
@@ -1,15 +1,16 @@
 
 <div class="image-video-block">
     <div class="section__row grid">
-        <h2 class="image-video-block__heading heading heading--two">{% if curriculum %}{{page.title}} curriculum{% else %}{{heading}}{% endif %}</h2>
+        <h2 class="image-video-block__heading heading {% if curriculum %}heading--two{% else %}heading--one{% endif %}">{% if curriculum %}{{page.title}} curriculum{% else %}{{heading}}{% endif %}</h2>
+        {% if has_meta %}<h3 class="image-video-block__subheading heading heading--four image-video-block__subheading--mobile">{{subheading}}</h3>{% endif %}
     </div>
     <div class="section__row grid">
         {% include "patterns/molecules/image-caption-link/image-caption-link.html" with modal=modal %}
     </div>
     <div class="section__row grid">
-        <h3 class="image-video-block__subheading heading heading--four">{{subheading}}</h3>
+        <h3 class="image-video-block__subheading heading heading--four {% if has_meta %}image-video-block__subheading--tablet{% endif %}">{{subheading}}</h3>
         {% if has_meta %}
-            <div>
+            <div class="image-video-block__meta">
                 <p class="image-video-block__copy image-video-block__copy--meta-heading body body--one">{{meta_heading}}</p>
                 <p class="image-video-block__copy image-video-block__copy--meta-copy body body--one">{{meta_copy}}</p>
                 {% if href %}
