--- a/rca/static_src/sass/components/_image-video-block.scss
+++ b/rca/static_src/sass/components/_image-video-block.scss
@@ -37,6 +37,22 @@
         @include media-query(large) {
             grid-column: 3 / span 1;
         }
+
+        &--mobile {
+            margin-bottom: ($gutter * 2);
+
+            @include media-query(medium) {
+                display: none;
+            }
+        }
+
+        &--tablet {
+            display: none;
+
+            @include media-query(medium) {
+                display: block;
+            }
+        }
     }
 
     &__copy {
@@ -47,6 +63,18 @@
         &--meta-copy {
             color: $color--dark-grey;
         }
+
+        @include media-query(medium) {
+            grid-column: 2 / span 1;
+        }
+
+        @include media-query(large) {
+            grid-column: 4 / span 1;
+        }
+    }
+
+    &__meta {
+        grid-column: 1 / span 2;
 
         @include media-query(medium) {
             grid-column: 2 / span 1;
