--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -36,9 +36,17 @@
                 </div>
             </section>
 
-            <section class="section bg bg--dark">
+            <section class="section section--top-space bg bg--dark">
 
-                Alumni stories
+                <div class="alumni-stories">
+                    <div class="alumni-stories__header grid">
+                        <h2 class="alumni-stories__heading heading heading--one">Where will the RCA take you?</h2>
+                    </div>
+
+                    <div class="alumni-stories__carousel grid">
+                        {% include "patterns/organisms/carousel/carousel.html" %}
+                    </div>
+                </div>
 
             </section>
 
