--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'components/app';
 @import 'components/apply-intro';
 @import 'components/audience-nav-item';
+@import 'components/alumni-stories';
 @import 'components/back-link';
 @import 'components/button';
 @import 'components/blockquote';
