fix video modal sizing after the embed was changed

--- a/rca/project_styleguide/templates/patterns/molecules/video-modal/video-modal.html
+++ b/rca/project_styleguide/templates/patterns/molecules/video-modal/video-modal.html
@@ -8,7 +8,9 @@
             <svg class="video-modal__close-icon" width="20" height="20"><use xlink:href="#close"></use></svg>
         </a>
         <div class="video-modal__container">
-            {% embed video %}
+            <div style="padding-bottom: 56.25%" class="responsive-object">
+                {% embed video %}
+            </div>
         </div>
     </div>
 </div>
