--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -44,7 +44,17 @@
 
             <section class="section bg bg--light">
 
-                Partnership module
+                <div class="partnerships">
+
+                    <div class="partnerships__header grid">
+                        <h2 class="partnerships__heading heading heading--one">Working with the best</h2>
+                        <p class="paternships__introduction">We work with a selection of the world's most innovative organisations.</p>
+                    </div>
+                    <div class="partnerships__carousel grid">
+                        {% include "patterns/organisms/carousel/carousel.html" %}
+                    </div>
+
+                </div>
 
             </section>
 
