--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -58,6 +58,7 @@
 @import 'components/page';
 @import 'components/pathways';
 @import 'components/pathway-item';
+@import 'components/partnerships';
 @import 'components/programme-overview';
 @import 'components/proposition-statement';
 @import 'components/related-content';
