use correct font on meta heading

--- a/rca/static_src/sass/components/_image-video-block.scss
+++ b/rca/static_src/sass/components/_image-video-block.scss
@@ -57,6 +57,7 @@
 
     &__copy {
         &--meta-heading {
+            font-family: $font--secondary;
             margin-bottom: ($gutter / 2);
         }
 
