Switching to typekit for time being

--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -18,7 +18,7 @@
         {% endif %}
 
         {% block meta_tags %}{% endblock %}
-        <link rel="stylesheet" type="text/css" href="//cloud.webtype.com/css/2dc77ba2-6663-49b6-9e6c-aa009c06648b.css" />
+        <link rel="stylesheet" href="https://use.typekit.net/upp3cjk.css">
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
         {% block extra_css %}{% endblock %}
