--- a/rca/static_src/sass/base/_base.scss
+++ b/rca/static_src/sass/base/_base.scss
@@ -72,6 +72,7 @@ textarea {
 
 a {
     font-family: $font--secondary;
+    font-weight: $weight--medium;
     text-decoration: none;
 
     &:focus,
