--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -27,10 +27,10 @@ $color--meta: $color--light-grey;
 
 // --------------------------------- Fonts --------------------------------------
 
-$font--primary: 'benton-sans', 'Benton Sans', 'BentonSans', 'Helvetica Neue', Arial, Helvetica,
-    Sans-Serif;
-$font--secondary: 'benton-sans', 'Benton Sans Medium', 'BentonSans-Medium', 'Helvetica Neue',
+$font--primary: 'benton-sans', 'Benton Sans', 'BentonSans', 'Helvetica Neue',
     Arial, Helvetica, Sans-Serif;
+$font--secondary: 'benton-sans', 'Benton Sans Medium', 'BentonSans-Medium',
+    'Helvetica Neue', Arial, Helvetica, Sans-Serif;
 
 // Font weights
 $weight--medium: 600;
