correct stat block fonts after they were updated

--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
@@ -14,7 +14,7 @@
                         {% if stat.before %}
                             <span class="stat-block__before">{{stat.before}}</span>
                         {% endif %}
-                        <h4 class="stat-block__number {% if stat.number == 1 %}stat-block__number--thin{% endif %}">
+                        <h4 class="stat-block__number">
                             {{stat.number}}
                         </h4>
                         {% if stat.after %}
