--- a/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
+++ b/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
@@ -5,7 +5,7 @@
         </div>
         <div class="cookie__action body body--two">
             <a aria-label="Close" href="#" class="link link--secondary link--close cookie__btn" data-cookie-dismiss>
-                <span class="link__label">Dismiss</span>
+                <span class="link__label">Close</span>
                 <svg width="10" height="10" class="link__icon"><use xlink:href="#close"></use></svg>
             </a>
         </div>
