--- a/rca/static_src/sass/components/_heading.scss
+++ b/rca/static_src/sass/components/_heading.scss
@@ -1,6 +1,6 @@
 .heading {
     line-height: $line-height-large;
-    font-weight: $weight--medium;
+    font-weight: $weight--normal;
 
     &--display-one {
         @include font-size(xxxxl);
