--- a/rca/static_src/sass/components/_outdated-banner.scss
+++ b/rca/static_src/sass/components/_outdated-banner.scss
@@ -28,6 +28,7 @@
     &__heading {
         margin-bottom: ($gutter / 3);
         font-family: $font--secondary;
+        font-weight: $weight--medium;
     }
 
     &__copy {
