--- a/rca/static_src/sass/components/_pathway-item.scss
+++ b/rca/static_src/sass/components/_pathway-item.scss
@@ -8,6 +8,7 @@
         max-width: 50%;
         min-width: 50%;
         font-family: $font--secondary;
+        font-weight: $weight--medium;
     }
 
     &__description {
