--- a/rca/static_src/sass/components/_steps.scss
+++ b/rca/static_src/sass/components/_steps.scss
@@ -31,6 +31,7 @@
         display: block;
         position: relative;
         font-family: $font--secondary;
+        font-weight: $weight--medium;
         margin-top: ($gutter * 3);
         border-top: 4px solid $color--tertiary;
         padding: ($gutter / 2) ($gutter * 3) 0 0;
