--- a/rca/static_src/sass/components/_fees.scss
+++ b/rca/static_src/sass/components/_fees.scss
@@ -50,6 +50,7 @@
     &__heading {
         display: inline;
         font-family: $font--secondary;
+        font-weight: $weight--medium;
         max-width: 190px;
 
         @include media-query(large) {
