--- a/rca/static_src/sass/components/_image-video-block.scss
+++ b/rca/static_src/sass/components/_image-video-block.scss
@@ -58,6 +58,7 @@
     &__copy {
         &--meta-heading {
             font-family: $font--secondary;
+            font-weight: $weight--medium;
             margin-bottom: ($gutter / 2);
         }
 
