--- a/rca/static_src/sass/components/_stat-block.scss
+++ b/rca/static_src/sass/components/_stat-block.scss
@@ -81,6 +81,7 @@
     &__number {
         font-size: 80px;
         line-height: 81px;
+        font-weight: $weight--medium;
 
         @include media-query(medium) {
             font-size: 100px;
