adjust top spacing and link width

--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -168,6 +168,10 @@
         }
     }
 
+    &--book {
+        max-width: 170px;
+    }
+
     &__icon {
         position: relative;
         flex-basis: 12px;
