--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -12,11 +12,11 @@
 
         <div class="page__content">
 
-            <section class="section section--start bg bg--dark">
+            <section class="section section--top-space-large bg bg--dark">
 
                 <div class="proposition-statement grid">
                     <div class="proposition-statement__introduction">The world’s number 1 art & design university</div>
-                    <a href="#" class="proposition-statement__link link link--primary link--link body body--two">
+                    <a href="#" class="proposition-statement__link link link--primary link--link link--book">
                         <span class="link__label">Book an open day</span>
                         <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
                     </a>
