--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -17,6 +17,18 @@
         }
     }
 
+    &--top-space-large {
+        padding-top: ($gutter * 5.75);
+
+        @include media-query(medium) {
+            padding-top: ($gutter * 18.25);
+        }
+
+        @include media-query(large) {
+            padding-top: ($gutter * 12.5);
+        }
+    }
+
     &--end {
         padding-bottom: ($gutter * 2.5);
 
